[metadata]
name = ironman
description = SoC Firmware for L1Calo
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/kratsg/ironman
author = Giordon Stark, Emily Smith
author_email = gstark@cern.ch, emsmith@cern.ch
license = MIT
license_file = LICENSE
keywords = physics software-on-chip SoC bitbake slow-control ipbus
project_urls =
    Documentation = https://ironman.readthedocs.io/
    Source = https://github.com/kratsg/ironman
    Tracker = https://github.com/krasg/ironman/issues
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: System :: Hardware
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    Twisted>=15.4.0
    zope.interface==4.1.3
    construct==2.9.39
    pyyaml>=4.2b1

[options.packages.find]
where = src

[flake8]
# E203: whitespace before ':'
# E402: module level import not at top of file
# E501: line too long
extend-ignore = E203, E402, E501
max-line-length = 88
count = True
statistics = True
